<resources>
    <string name="app_name">GCC Corona Monitoring</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_key" translatable="false">AIzaSyATCamD6FNW8UuOE6QlOvYTJ3-H2IWanuc</string>
    <string name="previewimageDescription">previewImage</string>
    <string name="photoSubmitButton">SUBMIT</string>
    <string name="nextButton">Next</string>
    <string name="photoRetakeButton">RETAKE</string>
    <string name="dashBoardTitle">GCC Corona Monitoring App</string>
    <string name="leaderboardTitle">LEADERBOARD</string>
    <string name="intro_desc">Hello there! This is Greater Chennai Corporation\'s official CORONA MONITORING APP</string>

    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_userID">Forgot UserID?</string>
    <string name="loginButton">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signupButton">Signup</string>
    <string name="otp_verification_text">Please enter the OTP that you\'ve received</string>
    <string name="submit">Submit</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="dob">Date of birth</string>
    <string name="gem_credit_message">Gems will be credited within 24 Hours</string>
    <string name="gems">GEMS</string>
    <string name="weekly_rank">Weekly Rank</string>
    <string name="next_mission">Task</string>
    <string name="green_gem">green gem</string>
    <string name="evidence_submitted_gem">evidence submitted gem</string>
    <string name="evidencesubmittedtitle">evidenceSubmittedTitle</string>
    <string name="stars">stars</string>
    <string name="continue_button">Continue</string>
    <string name="userid_email">UserID</string>
    <string name="userid">UserID</string>
    <string name="csrxbackgroundimage">CSRXBackgroundImage</string>
    <string name="select_avatar">Select Avatar</string>

    <string name="drawer_menu_howtoplay">How to Play</string>
    <string name="drawer_menu_invite">Invite</string>
    <string name="drawer_menu_faq">FAQ\'s</string>
    <string name="drawer_menu_help">Get Help</string>
    <string name="drawer_menu_containment_zones">Containment Zones</string>
    <string name="drawer_menu_rateus">Rate Us</string>
    <string name="drawer_menu_leaderboard">Leaderboard</string>
    <string name="drawer_menu_aboutus">About us</string>
    <string name="drawer_menu_rewards">Rewards</string>
    <string name="rewardstitle">REWARDS</string>
    <string name="back_arrow_button">Back Arrow Button</string>
    <string name="menu_button">menu button</string>
    <string name="next">Next</string>
    <string name="menu_item_image">menu item image</string>
    <string name="mission_logo">mission logo</string>
    <string name="reward_description_image">reward description image</string>
    <string name="signInErrorTitle">Sign In Error</string>
    <string name="useCorrectCredentialMessage">Please enter a valid otp</string>
    <string name="turnOnLocationMessage">Please turn on location</string>
    <string name="unableToGetYourLocation">Unable to get your location at the moment. Please try again later.</string>
    <string name="incorrectMobileNumberMessage">Please enter the correct mobile number</string>
    <string name="unableToSignUp">Unable to sign up</string>
    <string name="successfulSignUp">Signed up successfully</string>
    <string name="loginRedirectMessage">Please use your credentials to login</string>
    <string name="tryAgainLater">Please try again later</string>
    <string name="unableToSendOTP">Unable to send an OTP</string>
    <string name="insufficientDetails">Insufficient details</string>
    <string name="incorrectSignUpDetails">Please check whether you have entered all the details correctly</string>
    <string name="usernameUnavailable">Username unavailable</string>
    <string name="usernameUnavailableMessage">The username you entered has already been taken. Please type in a different username.</string>
    <string name="permissionsDeniedTitle">Permissions have been denied</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="okButtonText">OK</string>
    <string name="permissionRequestMessage">We need access to all the permissions in order to capture the image and upload it to our servers to serve you better.</string>
    <string name="permanentPermissionDeniedMessage">It seems you have disabled the required permissions permanently. The app will not work without those permissions. If you would like to grant the permissions, click on \'OK\' and grant all permissions. If you wish not to, the app will shutdown itself.</string>
    <string name="permissionsRequired">Permissions Required</string>
    <string name="turnOffMockLocationTitle">TURN OFF MOCK LOCATION</string>
    <string name="turnOffMockLocationDescription">Please turn OFF mock location to continue using the app</string>
    <string name="gotoSettingsButtonText">GO TO SETTINGS</string>
    <string name="gender">Gender</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_amp_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="continueButtonText">Continue</string>
    <string name="sendingOTPDescription">We will send you a One Time Password to this number</string>
    <string name="get_otp_button">Get OTP</string>

    <!-- Policy details -->
    <string name="policy_title">Terms and Conditions</string>
    <string name="policy_description_title1">1. This application is the property of Greater Chennai Corporation</string>
    <string name="policy_description1">This Application is developed to handle crisis situations created due to the CORONA outbreak. The data collected through this application will not be used for any other purpose unless authorized by law. Further, the data collected will be completely deleted in 3 months.</string>
    <string name="policy_description_title2">2. Legal and Acceptable Use</string>
    <string name="policy_description2">You must access and use our Services only for legal, authorized, and acceptable purposes. You will not use (or assist others in using) our Services in ways that: (a) violate, misappropriate, or infringe the rights of citizens, our users, or others, including privacy, publicity, intellectual property, or other proprietary rights; (b) are illegal, obscene, defamatory, threatening, intimidating, harassing, hateful, racially, or ethnically offensive, or instigate or encourage conduct that would be illegal, or otherwise inappropriate, including promoting violent crimes; © involve publishing falsehoods, misrepresentations, or misleading statements; (d) impersonate someone; (e) involve sending illegal or impermissible communications such as bulk messaging, auto-messaging, auto-dialing, and the like; or (f) involve any non-personal use of our Services unless otherwise authorized by us.</string>
    <string name="policy_description_title3">3. Keeping Your Account Secure.</string>
    <string name="policy_description3">You are responsible for keeping your device and your account safe and secure, and you must notify us promptly of any unauthorized use or security breach of your account or our Services.</string>
    <string name="policy_agreement_text">I agree to the Terms and Conditions as stated above</string>
    <string name="policy_error">Please check the checkbox in order to continue.</string>
    <string name="first">first</string>
    <string name="forceupdate_current_version">Your app\'s version number is</string>
    <string name="azhagu_description">The idea was conceptualized by M.P. Azhagu Pandia Raja, Research Fellow with Ministry of Housing and Urban Affairs and Greater Chennai Corporation.</string>
    <string name="mrcooper_description">This application and infrastructure were designed and developed by a team of engineers at Mr. Cooper, Chennai. Mr. Cooper is an industry-leading mortgage services provider serving customers through servicing, originations, and digital real estate solutions. They are headquartered in Dallas, TX, with major outposts in Irvine, Chandler, Longview, Highlands Ranch, Chennai, and Bengaluru.</string>
    <string name="techforcities_description">Tech for Cities is an effort under the Chennai Tricolor Initiative Trust - a non-profit, volunteer run organization. Tech for Cities works with Governments and Non-profits to build collaborative opensource solutions that help maximise impact. More details about Chennai Tricolor Initiative at www.chennaitricolor.in</string>
    <string name="GCC">Greater Chennai Corporation</string>
    <string name="aboutus_heading"> GCC - CORONA Monitoring App</string>
    <string name="aboutus_description">This application was developed to aid in cluster analysis and reporting of incidents related to CORONA outbreak. This application will be used by Greater Chennai Corporation for CORONA mitigation measures. Geo tagging of information is the primary purpose of the application. The information collected will not be used for any other purpose. This application can be uninstalled once the COVID-19 issue gets resolved.</string>
    <string name="update_available">Update Available</string>
    <string name="forceupdateapplogo">forceUpdateAppLogo</string>
    <string name="maintenanceLogo">maintenanceLogo</string>
    <string name="splashlogo">splashLogo</string>
    <string name="updateButton">Update</string>
    <string name="unableToUpdateProfileName">Unable to update your name</string>
    <string name="txt_basicform">Basic Details</string>
    <string name="txt_basicform_mandatory">* required</string>


</resources>