<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/submission_background"
    tools:context=".SubmitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxWidth="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/evidence_submitted"
            android:contentDescription="@string/evidencesubmittedtitle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/stars"
            android:contentDescription="@string/stars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/gem_holder"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/evidence_submitted_gem"
                android:src="@drawable/ic_gem_green" />

            <com.gcc.smartcity.fontui.FontTextView
                android:id="@+id/numberOfGems"
                custom:fontFace="Lato.ttf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="60sp" />

        </LinearLayout>

        <com.gcc.smartcity.fontui.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/gem_credit_message"
            android:textColor="@color/white"
            android:textSize="16sp"
            custom:fontFace="Lato-Bold.ttf" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="30dp">

    <com.gcc.smartcity.fontui.FontButton
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_login"
        android:ems="10"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textSize="16sp"
        custom:fontFace="Lato-Bold.ttf" />
</LinearLayout>

</RelativeLayout>