<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".loginandregistration.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/csrxbackgroundimage"
        android:scaleType="centerCrop"
        android:src="@mipmap/csrx_background" />

    <RelativeLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <com.gcc.smartcity.fontui.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/dashBoardTitle"
            android:textColor="@color/agentx_txt_color"
            android:textSize="18sp"
            custom:fontFace="Lato-Bold.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_rounded_agent_blue"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.gcc.smartcity.fontui.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/forgot_userID"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    custom:fontFace="Lato-Bold.ttf" />

            </LinearLayout>

            <com.gcc.smartcity.fontui.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"
                custom:fontFace="Lato-Bold.ttf" />

            <com.gcc.smartcity.fontui.FontEditText
                android:id="@+id/forgotuserid_emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_border_edittext"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/davyGrey"
                android:textCursorDrawable="@drawable/style_cursor" />

            <com.gcc.smartcity.fontui.FontButton
                android:id="@+id/forgotuserid_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rounded_login"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="16sp"
                custom:fontFace="Lato-Bold.ttf" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loader_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <include layout="@layout/layout_loading" />

    </LinearLayout>

</RelativeLayout>