<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/missionParent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgMission"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_camera_blue"
        android:contentDescription="@string/mission_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/imgMission"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <com.gcc.smartcity.fontui.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_mission"
            android:textColor="@color/agentx_mission_title"
            android:textSize="15sp"
            custom:fontFace="Lato-Bold.ttf" />

        <com.gcc.smartcity.fontui.FontTextView
            android:id="@+id/missionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/agentx_text_dark"
            android:textSize="15sp"
            custom:fontFace="Lato-Bold.ttf" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_gem_green"
            android:contentDescription="@string/green_gem" />

        <com.gcc.smartcity.fontui.FontTextView
            android:id="@+id/missionGemCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/agentx_gem_green_color"
            android:textSize="20sp"
            custom:fontFace="Lato-Bold.ttf" />

    </LinearLayout>


</RelativeLayout>